fix(services): update z-index property for loader component

--- a/src/app/core/components/loader/loader.component.scss
+++ b/src/app/core/components/loader/loader.component.scss
@@ -1,6 +1,6 @@
 .loading {
   position: fixed;
-  z-index: 99999;
+  z-index: 9999;
   overflow: show;
   margin: auto;
   top: 0;
